
[project]
name = "onesync"
version = "0.1.0"
description = ""
authors = [
    {name = "race", email = "raceychan@gmail.com"},
]
dependencies = [
    "sh>=2.0.4",
    "typer>=0.9.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

