
[project]
name = "onesync"
version = "0.1.0"
description = ""
authors = [
    {name = "race", email = "raceychan@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

